refactor: improve code structure without functional changes